--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.3",
+    "mongoose-slug-generator": "^1.0.4",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4",
     "slugify": "^1.6.6"
   }
